<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_home_start_margin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_home_end_margin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_home_top_margin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_home_bottom_margin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/tv_home_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/simple_arithmetic"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/gl_home_end_margin"
        app:layout_constraintStart_toStartOf="@id/gl_home_start_margin"
        app:layout_constraintTop_toTopOf="@id/gl_home_top_margin" />

    <Button
        android:id="@+id/b_home_training"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/training_game"
        app:layout_constraintBottom_toTopOf="@id/b_home_rating"
        app:layout_constraintEnd_toEndOf="@id/gl_home_end_margin"
        app:layout_constraintStart_toStartOf="@id/gl_home_start_margin" />

    <Button
        android:id="@+id/b_home_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/rating_game"
        app:layout_constraintBottom_toTopOf="@id/b_home_history"
        app:layout_constraintEnd_toEndOf="@id/gl_home_end_margin"
        app:layout_constraintStart_toStartOf="@id/gl_home_start_margin" />

    <Button
        android:id="@+id/b_home_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/game_history"
        app:layout_constraintBottom_toTopOf="@id/b_home_settings"
        app:layout_constraintEnd_toEndOf="@id/gl_home_end_margin"
        app:layout_constraintStart_toStartOf="@id/gl_home_start_margin" />

    <Button
        android:id="@+id/b_home_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintBottom_toTopOf="@id/gl_home_bottom_margin"
        app:layout_constraintEnd_toEndOf="@id/gl_home_end_margin"
        app:layout_constraintStart_toStartOf="@id/gl_home_start_margin" />


</androidx.constraintlayout.widget.ConstraintLayout>